# bakeneko

./: .gitignore  Dockerfile  Makefile  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  report.html
.github/workflows/: main.yml
bakeneko/: config.py  dev_server.py
bakeneko/bot/: __init__.py  models.py
bakeneko/db/: __init__.py  answer.py  answer_crud.py  models.py  question.py  question_crud.py  scheme.py
bakeneko/models/: __init__.py  add_answer.py  answer.py  enums.py  question.py  store_dto.py  types.py
bakeneko/settings/: __init__.py
bakeneko/static/js/: webmenu.js
bakeneko/store/: __init__.py  base.py  exception.py  in_memory.py  memory.py  types.py
bakeneko/store/SQLStore/: __init__.py  db_models.py  settings.py
bakeneko/templates/: __init__.py  base.jinja  index.jinja  macros.jinja  og.jinja
bakeneko/templates/tg/: answer.jinja  answers.jinja  menu copy.jinja  menu.jinja
bakeneko/use_case/: __init__.py
bakeneko/web/: __init__.py  config.py  dependencies.py  static.py
bakeneko/web/dependencies/: context.py
bakeneko/web/routers/: add_answer.py  question.py  tg_web_app.py  webhook.py
bakeneko/web/routes/: __init__.py  answer.py  home.py
tests/: Dockerfile  conftest.py  utils.py
tests/db/: test_answer.py  test_db.py  test_question.py
tests/models/: test_add_answer.py  test_answer.py  test_question.py
tests/store/: test_store.py
tests/store/SQLStore/: conftest.py  test_insert_question.py
tests/store/memory/: test_answer.py  test_group.py  test_question.py
tests/web/: test_question.py  test_root.py
web-vue/: package-lock.json  package.json  vite.config.ts
