[tool.poetry]
name = "bakeneko"
version = "0.1.0"
description = ""
authors = ["rychanya <rychanya@gmail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.37"}
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
pydantic = "^1.9.1"
uvicorn = {extras = ["standard"], version = "^0.18.1"}
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
coverage = "^6.4"
pytest-cov = "^3.0.0"
httpx = "^0.23.0"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
