[tool.poetry]
name = "bakeneko"
version = "0.1.0"
description = ""
authors = ["rychanya <rychanya@gmail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.1"
pydantic = "^1.9.1"
uvicorn = {extras = ["standard"], version = "^0.18.1"}
fastapi = "^0.78.0"
loguru = "^0.6.0"
python-telegram-bot = "20.0a2"
python-dotenv = "^0.20.0"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
aiosqlite = "^0.17.0"
asyncpg = "^0.26.0"
testcontainers = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
coverage = "^6.4"
pytest-cov = "^3.0.0"
httpx = "^0.23.0"
pytest-html = "^3.1.1"
requests = "^2.28.1"
psycopg2-binary = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
